base/src/test/resources/failure/patterns/selection-failure.aya.txt
In file $FILE:8:21 ->

  6 |    | A, suc m => vcons A (Vect A m)
  7 |   def mapImpl {A B : Type} {n : Nat} (f : Pi A -> B) (xs : Vect A n) : Vect B n
  8 |    | {A}, {B}, {n}, f, vnil => vnil
    |                        ^--^

Error: I'm not sure if there should be a case for
         vnil
       as index unification is blocked for type
         Vect A n

In file $FILE:9:21 ->

  7 |   def mapImpl {A B : Type} {n : Nat} (f : Pi A -> B) (xs : Vect A n) : Vect B n
  8 |    | {A}, {B}, {n}, f, vnil => vnil
  9 |    | {A}, {B}, {n}, f, vcons x xs => _
    |                        ^--------^

Error: I'm not sure if there should be a case for
         vcons x xs
       as index unification is blocked for type
         Vect A n

2 error(s), 0 warning(s).
What are you doing?
